assets/css/styles.css
:root {
    --footer-height: 30px;
    --grey: #808080;
    --light-grey: #D3D3D3;
    --nav-height: 50px;
    --purple: #A212FF;
    --vertical-padding: 20px;
}

a {
    color: var(--purple);
}

body {
    font-family: "Space Mono", monospace;
    margin: 0;
}

code {
    font-family: "Space Mono", monospace;
    font-weight: bold;
}

li > code, p > code {
    background-color: var(--light-grey);
}

.centered {
    text-align: center;
}

div.highlight > div {
    overflow-x: scroll;
}

div.post-content {
    text-align: justify;
}

div.social-icons {
    border-radius: 8px;
    border: 1px solid var(--grey);
    margin: 30px auto 0;
    padding: 8px 8px 6px;
    width: fit-content;
}

div.social-icons a {
    display: inline-block;
}

div.social-icons svg {
    color: black;
    cursor: pointer;
    height: 26px;
    transition: ease-in-out 300ms;
    width: 26px;
    margin: 0 12px;
}

div.social-icons svg:hover {
    color: var(--purple);
}

footer {
    margin: auto;
    color: var(--grey);
    font-size: 0.8rem;
    line-height: var(--footer-height);
    width: fit-content;
}

li span.post-date {
    color: var(--grey);
    display: inline-block;
    width: 140px;
}

li span.post-description {
    font-size: 0.85rem;
    font-style: italic;
    margin-left: 1rem;
}

main {
    margin: auto;
    max-width: 1200px;
    min-height: calc(100vh - var(--nav-height) - var(--footer-height) - 5vh);
    padding: 0 var(--vertical-padding);
}

p.post-date {
    color: var(--grey);
    font-style: italic;
    margin: 30px 0;
    text-align: center;
}

ul.nav-list {
    display: flex;
    justify-content: space-between;
    line-height: var(--nav-height);
    list-style: none;
    margin: 0 auto 5vh;
    max-width: 1200px;
    padding: 0 var(--vertical-padding);
}

ul.nav-list li a {
    font-weight: bold;
}

ul.posts {
    align-self: flex-start;
}

